[package]
name = "app-config"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
