[package]
name = "backtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-config = { path = "../app_config" }
core = { path = "../core" }
domain = { path = "../domain" }
services = { path = "../services" }

chrono = "0.4.38"
crossbeam-channel = "0.5.12"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
log = "0.4"
log4rs = "1.3.0"
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
itertools = "0.13.0"
