[package]
name = "backtest"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
app-config = { path = "../app_config" }
core = { path = "../core" }
domain = { path = "../domain" }
services = { path = "../services" }

chrono = "0.4.38"
crossbeam-channel = "0.5.12"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
log = "0.4"
log4rs = "1.3.0"
reqwest = { version = "*", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
itertools = "0.13.0"
