[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
reqwest = { version = "*", features = ["json", "blocking"] }
backoff = "0.4.0"
