[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
log = "0.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
