[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
domain = { path = "../domain" }
backoff = "0.4.0"
chrono = "0.4.38"
crossbeam-channel = "0.5.12"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
log = "0.4"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
